# FastApiPoetry

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
routers/: alerta.py  hello.py
src/my_package_poetry/: main.py
src/my_package_poetry/routers/: alerta.py  hello.py
tests/: test_alerta.py  test_hello.py
