[tool.poetry]
name = "my-package-poetry"
version = "0.1.0"
description = "Projeto criado para teste do Poetry"
authors = ["richardpk15 <138160715+richardpk15@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_package_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
prospector = "^1.10.3"
setuptools = "^69.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
